<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityMain_CL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/md_white_1000"
        android:backgroundTint="@color/md_white_1000"
        android:backgroundTintMode="add"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        ads:layout_constraintBottom_toTopOf="@id/linearLayout"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintVertical_bias="1.0"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_br_top_line_gray"
        android:paddingTop="0.5dp"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/home_B"
            style="@style/bottom_navigation_buttons"
            android:drawablePadding="-6dp"
            android:paddingTop="6dp"
            android:text="@string/home" />

        <Button
            android:id="@+id/explore_B"
            style="@style/bottom_navigation_buttons"
            android:drawablePadding="-6dp"
            android:paddingTop="6dp"
            android:text="@string/explore" />

        <Button
            android:id="@+id/upload_B"
            style="@style/bottom_navigation_buttons"
            android:drawablePadding="-6dp"
            android:paddingTop="6dp"
            android:text="@string/upload" />

        <Button
            android:id="@+id/profile_B"
            style="@style/bottom_navigation_buttons"
            android:drawablePadding="-6dp"
            android:paddingTop="6dp"
            android:text="@string/profile" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/mainPagesContainer_FL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bgBlurForBtmTemplate_V"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:alpha="0.0"
        android:background="@color/md_black_1000" />

    <FrameLayout
        android:id="@+id/signinTemplateContainer_FL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
