<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite_FFFFFF"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Upload">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite_FFFFFF"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".Upload">

    <include
        android:id="@+id/include"
        layout="@layout/custom_action_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorWhite_FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/consolas_regular"
            android:lineSpacingExtra="4sp"
            android:text="Notes you upload will help many student and teachers to clear their doubts and assist them in exams!"
            android:textColor="@color/colorGray_AAAAAA"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/selectPDF_B"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_apptheme_pill_20"
            android:backgroundTint="@color/colorWhite_FFFFFF"
            android:fontFamily="@font/consolas_regular"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="Select PDF"
            android:textAllCaps="false"
            android:textColor="@color/colorAppTheme"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />
    </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/signin_CL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <!-- teacherName_ET -->
            <EditText
                android:id="@+id/teacherName_ET"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="300dp"
                android:background="@drawable/bg_br_radius_gray_smaller"
                android:ems="10"
                android:fontFamily="@font/segoe_ui"
                android:hint="@string/teacher_or_author_s_name"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/colorGray_999999"
                android:textColorHint="@color/colorGray_AAAAAA"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/subjectName"
                app:layout_constraintStart_toStartOf="@+id/textView_teacher"
                app:layout_constraintTop_toBottomOf="@+id/textView_teacher" />

            <Button
                android:id="@+id/unitOne_B"
                style="@style/unit_select_button"
                android:layout_marginStart="16dp"
                android:text="1"
                app:layout_constraintBottom_toBottomOf="@+id/textView_unit"
                app:layout_constraintStart_toEndOf="@+id/textView_unit"
                app:layout_constraintTop_toTopOf="@+id/textView_unit" />

            <Button
                android:id="@+id/unitTwo_B"
                style="@style/unit_select_button"
                android:text="2"
                app:layout_constraintBottom_toBottomOf="@+id/unitOne_B"
                app:layout_constraintStart_toEndOf="@+id/unitOne_B"
                app:layout_constraintTop_toTopOf="@+id/unitOne_B" />

            <Button
                android:id="@+id/unitThree_B"
                style="@style/unit_select_button"
                android:text="3"
                app:layout_constraintBottom_toBottomOf="@+id/unitTwo_B"
                app:layout_constraintStart_toEndOf="@+id/unitTwo_B"
                app:layout_constraintTop_toTopOf="@+id/unitTwo_B" />

            <Button
                android:id="@+id/unitFour_B"
                style="@style/unit_select_button"
                android:text="4"
                app:layout_constraintBottom_toBottomOf="@+id/unitThree_B"
                app:layout_constraintStart_toEndOf="@+id/unitThree_B"
                app:layout_constraintTop_toTopOf="@+id/unitThree_B" />

            <Button
                android:id="@+id/unitFive_B"
                style="@style/unit_select_button"
                android:text="5"
                app:layout_constraintBottom_toBottomOf="@+id/unitFour_B"
                app:layout_constraintStart_toEndOf="@+id/unitFour_B"
                app:layout_constraintTop_toTopOf="@+id/unitFour_B" />

            <TextView
                android:id="@+id/textView5"
                style="@style/upload_textView"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/name_colon"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pdfName_TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:ellipsize="end"
                android:fontFamily="@font/segoe_ui"
                android:gravity="start|center_vertical"
                android:maxLines="1"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:text="@string/sample_file_name"
                android:textColor="@color/colorGray_AAAAAA"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5" />


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/segoe_ui"
                android:lineSpacingExtra="4sp"
                android:maxLines="2"
                android:text="@string/size_colon"
                android:textColor="@color/colorAppTheme"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/pdfSize_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:text="@string/size"
                android:textColor="@color/colorGray_AAAAAA"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/pdfName_TV"
                app:layout_constraintTop_toTopOf="@+id/textView7" />


            <TextView
                android:id="@+id/textView_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/comfortaa_bold"
                android:lineSpacingExtra="4sp"
                android:maxLines="2"
                android:text="@string/details"
                android:textColor="@color/colorAppTheme"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />


            <TextView
                android:id="@+id/textView_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/subject_colon_asterisk"
                android:textColor="#999999"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/textView_details"
                app:layout_constraintTop_toBottomOf="@+id/textView_details" />

            <AutoCompleteTextView
                android:id="@+id/subjectName"
                android:ems="10"
                android:textSize="14sp"
                android:hint="@string/subject_name"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:textColor="@color/colorGray_999999"
                android:textColorHint="@color/colorGray_AAAAAA"
                android:fontFamily="@font/segoe_ui"
                android:inputType="textPersonName"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="32dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:background="@drawable/bg_br_radius_gray_smaller"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView_subject"
                app:layout_constraintTop_toBottomOf="@+id/textView_subject"
                tools:ignore="Autofill" />

            <!--<android.support.v7.widget.RecyclerView-->
                <!--android:id="@+id/subjectSelectorList_RV"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:overScrollMode="never"-->
                <!--android:layout_marginStart="8dp"-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:layout_marginEnd="32dp"-->
                <!--android:paddingStart="15dp"-->
                <!--android:paddingEnd="15dp"-->
                <!--app:layout_constraintEnd_toEndOf="parent"-->
                <!--app:layout_constraintStart_toStartOf="@+id/textView_subject"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/textView_subject"-->
                <!--android:visibility="gone" />-->

            <TextView
                android:id="@+id/textView_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/unit_colon"
                android:textColor="#999999"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/textView_subject"
                app:layout_constraintTop_toBottomOf="@+id/subjectName" />

            <TextView
                android:id="@+id/textView_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/teacher_slash_author_colon"
                android:textColor="#999999"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/textView_unit"
                app:layout_constraintTop_toBottomOf="@+id/unitFour_B" />

            <Button
                android:id="@+id/upload_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_apptheme_pill_20"
                android:backgroundTint="@color/colorWhite_FFFFFF"
                android:fontFamily="@font/consolas_regular"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/upload_pdf"
                android:textAllCaps="false"
                android:textColor="@color/colorAppTheme"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/teacherName_ET" />


        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
