<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite_FFFFFF"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="0dp"
    tools:context=".Home">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/app_name"
            android:textColor="@color/colorGray_777777"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fullName_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/home_page"
            android:textColor="@color/colorAppTheme"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/userDisplayPicture_IB"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/colorWhite_FFFFFF"
            android:contentDescription="@string/button_with_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_bookmark_red_border"
            app:layout_constraintBottom_toBottomOf="@+id/fullName_TV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/recentViewsLayout_CL"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/segoe_ui"
            android:text="@string/recent_views"
            android:textColor="@color/colorGray_777777"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recentViews_RV"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/noRecentViews_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/segoe_ui"
            android:text="no recent views"
            android:textColor="@color/colorGray_999999"
            android:textSize="14sp"
            android:textStyle="italic"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/subjectsLayout_CL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorWhite_FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentViewsLayout_CL">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/segoe_ui"
            android:text="@string/subjects"
            android:textColor="@color/colorGray_777777"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/subjectsSearch_ET"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_radius_gray"
            android:ems="10"
            android:hint="@string/search_subjects"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/colorGray_999999"
            android:textColorHint="@color/colorGray_777777"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageButton
            android:id="@+id/searchIconInSearchBar_IB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="3dp"
            android:backgroundTint="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@drawable/icon_search"
            app:layout_constraintBottom_toBottomOf="@+id/subjectsSearch_ET"
            app:layout_constraintEnd_toEndOf="@+id/subjectsSearch_ET"
            app:layout_constraintTop_toTopOf="@+id/subjectsSearch_ET" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/homeSubjects_RV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subjectsSearch_ET" />

        <LinearLayout
            android:id="@+id/notSignedInTemplate_LL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subjectsSearch_ET"/>

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
